WalletFill method and henhandler added
