# api/router.go
@@ -22,5 +22,7 @@ func New(options Options) {
 
 	http.HandleFunc("/wallet/check/exist", handler.WalletCheckExists)
 	http.HandleFunc("/wallet/check/balance", handler.WalletCheckBalance)
+	http.HandleFunc("/wallet/fill", handler.WalletFill)
+
 
 }
